# Project-Mancala-Inteligencia-Artificial

./: .gitignore  README.md  sonar-project.properties
.github/workflows/: backend-ci.yml  docker-publish.yml  motor-ci.yml  sonar.yml
backend/: Dockerfile  README.md  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  motor_client.py
backend/tests/: test_api.py
deploy/cloud/: backend-deployment.yml  configmap.yml  frontend-deployment.yml  motor-deployment.yml  services.yml
deploy/local/: docker-compose.test.yml  docker-compose.yml  loadtest.k6.js
deploy/local/k8s/: backend-deployment.yml  frontend-deployment.yml  motor-deployment.yml  services.yml
docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
motor/: CMakeLists.txt  Dockerfile  README.md
motor/bench/: mancala_bench.cpp
motor/src/: alphabeta.cpp  alphabeta.h  board.h  mcts.cpp  mcts.h  server.cpp
motor/tests/: suite.txt  test_alphabeta.cpp  test_board.cpp  test_mcts.cpp
